<resources>
    <string name="app_name">Amazon_task2</string>
    <string name="search_amazon">Search Amazon</string>
    <string name="deliver_to_uzbekistan">Deliver to Uzbekistan</string>
    <string name="sign_in_for_the_best_experience">Sign in for the best experience</string>
    <string name="sign_in_securely">Sign in securely</string>
    <string name="create_an_account">Create an account</string>
    <string name="women_s_fashion_sneakers">Women\'s fashion sneakers</string>
    <string name="see_more">See more</string>
    <string name="popular_gifts_in_camera">Popular Gifts in Camera</string>
    <string name="shop_now">Shop now</string>
    <string name="oculus">Oculus</string>
    <string name="milk_and_honey">Milk and Honey</string>
    <string name="dollar">$</string>
    <string name="_5">5</string>
    <string name="_06">06</string>
    <string name="_7_99">$7.99</string>
    <string name="top_sellers_in_books_for_you">Top Sellers in Books for you</string>
</resources>