<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp">

    <ImageView
        android:id="@+id/iv_book"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/book_milk_and_honey"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_book_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/milk_and_honey"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="normal" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="top|bottom"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dollar"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/tv_dollar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_5"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/tv_cent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_06"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="normal" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_book_old_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:textStyle="normal"
                android:textAllCaps="false"
                android:text="@string/_7_99"
                android:textSize="18sp"
                android:layout_gravity="center"/>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>